# bqemulatormanager

./: README.md  example.py  pyproject.toml
.github/workflows/: format.yml
bqemulatormanager/: __init__.py  emulator.py  manager.py  schema.py
examples/: basic.py  query.sql  testing.py
examples/resources/: schema_basic.yaml  schema_testing.yaml
resources/: schema_example.yaml
