[tool.poetry]
name = "bqemulatormanager"
version = "0.1.1"
description = ""
authors = ["gyuta <kuroshiba0408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.5.1"
pyyaml = "^6.0"
google-cloud-bigquery = "2.34.4"
db-dtypes = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
