[tool.poetry]
name = "bqemulatormanager"
version = "0.1.8"
description = ""
authors = ["gyuta <kuroshiba0408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyyaml = "^6.0"
google-cloud-bigquery = "2.34.4"
db-dtypes = "^1.0.4"
psutil = "^5.9.3"


[tool.poetry.group.dev.dependencies]
yapf = "*"
tox = "*"
isort = "*"
toml = "*"

[tool.yapf]
based_on_style = "pep8"
column_limit = 160

[tool.isort]
line_length = 160

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
